Add buttons to play individual rounds

--- a/index.html
+++ b/index.html
@@ -3,5 +3,13 @@
     <title>RO-SHAM-BO</title>
 </head>
 <body>
+    <input type="button" class="choice" id="rock" value="rock">
+    <input type="button" class="choice" id="paper" value="paper">
+    <input type="button" class="choice" id="scissors" value="scissors">
+    
+    <p id="game-result"></p>
+    <p id="score"></p>
+    <p id="match-result"></p>
+    
     <script src="script.js"></script>
 </body>
